# marlowe

./: .envrc  .gitignore  Analysis.hs  AnalysisProp.hs  CHANGELOG.md  Interactive.hs  LICENSE  README.md  RPS.hs  Semantics.hs  Semantics6.hs  SemanticsProp.hs  TreeAnalysis.hs  TreeVisualise.hs  cabal.project  ci.nix  flake.nix  haskell.nix  hie.yaml  index.html  isabelle.nix  marlowe.cabal  marlowe.js  release.nix  response-to-audit-report.md  shell.nix  stack.yaml  using-marlowe.md
app/: Main.hs
coq/: Contract.v  Inputs.v  LogicDefs.v  Makefile  OTFromList.v  Semantics.v  _CoqProject
docs/: README.adoc  README.md  Tutorials.md  actus-marlowe.md  analysis.md  challenge-plovdiv.md  challenge.md  differences.md  (+9 more)
equiv_exp/: ACTUS.hs  Conversion.hs  CouponBondGuaranteed.hs  Futures.hs  Main.hs  Minimal.hs  Semantics.hs  ZeroCouponBondGuaranteed.hs  marlowe.cabal
haskell/: marlowe-reference.cabal  marlowe.cabal
haskell/src/Language/Marlowe/: Pretty.hs
haskell/src/Language/Marlowe/Analysis/: FSMap.hs  FSSet.hs
haskell/src/Language/Marlowe/Examples/: CrowdFunding.hs  DepositIncentive.hs  Escrow.hs  EscrowSimple.hs
haskell/src/Language/Marlowe/Syntax/: AbsMarlowe.hs  LexMarlowe.x  Marlowe.cf  ParMarlowe.y  Translate.hs
isabelle/: Cheatsheet.thy  CloseSafe.thy  MList.thy  MoneyPreservation.thy  PositiveAccounts.thy  QuiescentResult.thy  ROOT  Semantics.thy  SemanticsSerialisation.thy  SemanticsTypes.thy  Serialisation.thy  SingleInputTransactions.thy  Specification.thy  StaticAnalysis.thy  Timeout.thy  TransactionBound.thy  ValidState.thy  marlowe-spec.cabal  marlowe.cabal
isabelle/CodeExports/: CodeExports.thy
isabelle/Core/: Accounts.thy  AssetsPreservation.thy  BigStep.thy  BlockchainTypes.thy  CodeExports.thy  MoneyPreservation.thy  MultiAssets.thy  OptBoundTimeInterval.thy  OptBoundTimeInterval2.thy  OptBoundTimeInterval3.thy  PositiveAccounts.thy  QuiescentResult.thy  Semantics.thy  SemanticsGuarantees.thy  SemanticsTypes.thy  SingleInputTransactions.thy  SmallStep.thy  SmallStepF.thy  SmallStepReduceContract.thy  TimeRange.thy  Timeout.thy  TransactionBound.thy  ValidState.thy
isabelle/Doc/Cheatsheet/: Cheatsheet.thy
isabelle/Doc/Cheatsheet/document/: root.tex
isabelle/Doc/Specification/: Core.thy  Examples.thy  Extended.thy  Guarantees.thy  Specification.thy  SpecificationLatexSugar.thy
isabelle/Doc/Specification/document/: json.tex  literate-haskell.sty  root.tex  root.tex~
isabelle/Examples/: Auction.thy  ContractForDifference.thy  Escrow.thy  Swap.thy
isabelle/Merkle/: MerkleInterpreter.thy  MerkleTypes.thy  Unmerkleize.thy
isabelle/StaticAnalysis/: StaticAnalysis.thy
isabelle/Util/: ByteString.thy  Division.thy  MList.thy  Serialisation.thy
isabelle/document/: root.tex
isabelle/haskell/: ArithNumInstance.hs  CoreOrphanEq.hs  MarloweCoreJson.lhs
isabelle/test/: Spec.hs
isabelle/test/Spec/Core/Examples/: Swap.hs
isabelle/test/Spec/Core/Serialization/: Json.hs
isabelle/test/Spec/Core/Serialization/golden/: action-choice.golden  action-deposit.golden  action-notify.golden  bound.golden  case.golden  choice-id.golden  contract-assert.golden  contract-close.golden  contract-if.golden  contract-let.golden  contract-pay.golden  contract-swap.golden  contract-when.golden  dolar-token.golden  external-payee.golden  input-choice.golden  input-deposit.golden  input-notify.golden  internal-payee.golden  interval-error-interval-in-past.golden  interval-error-invalid-interval.golden  observation-and.golden  observation-chose.golden  observation-eq.golden  observation-ge.golden  observation-gt.golden  observation-le.golden  observation-lt.golden  observation-not.golden  observation-or.golden  party-address.golden  party-role.golden  payment.golden  state.golden  transaction-error-ambiguous-time-interval-error.golden  transaction-error-apply-no-match-error.golden  transaction-error-interval-error.golden  transaction-error-useless-transaction.golden  transaction-output-error.golden  transaction-output-success.golden  (+17 more)
marlowe-spec-test/: README.md  marlowe-spec-test.cabal
marlowe-spec-test/app/: Main.hs
marlowe-spec-test/src/Marlowe/: Spec.hs  Utils.hs
marlowe-spec-test/src/Marlowe/Spec/: ClientProcess.hs  Core.hs  Interpret.hs  LocalInterpret.hs  Reproducible.hs  TypeId.hs
marlowe-spec-test/src/Marlowe/Spec/Core/: Arbitrary.hs  CloseSafe.hs  Examples.hs  Generators.hs  Guarantees.hs  Semantics.hs  SemiArbitrary.hs
marlowe-spec-test/src/Marlowe/Spec/Core/Examples/: Common.hs  ContractForDifference.hs  Escrow.hs  Swap.hs
marlowe-spec-test/src/Marlowe/Spec/Core/Serialization/: Json.hs
marlowe-spec-test/test/: LocalSpec.hs
semantics-1.0/meadow/meadow-sc/meadow-sc/: meadow-sc.cabal
semantics-1.0/meadow/meadow-sc/meadow-sc/src/: Lib.hs
semantics-1.0/meadow/meadow-sc/meadow-sc/static/: index.html
semantics-1.0/meadow/meadow-sc/meadow-sc/static/codemirror/: LICENSE
semantics-1.0/meadow/meadow-sc/meadow-sc/static/editor/: all.js  lib.js  out.frefs.json
semantics-1.0/meadow/meadow-sc/meadow-sc/static/jquery-ui/: jquery-ui.css
semantics-3.0/: ACTUS.hs  ActusContracts.hs  BItSem.hs  CrowdFunding.hs  DepositIncentive.hs  Escrow.hs  ExpCrowdFunding.hs  ExpEscrow.hs  ExpRent.hs  Main.hs  Marlowe.hs  Readme.md  Rent.hs  Semantics.hs  Semantics1.hs  Semantics2.hs  Semantics3.hs  Semantics4.hs  ZCBG.hs  ZCBG2.hs  marlowe.cabal  stack.yaml  using-marlowe.md
semantics-3.0/isabelle/: ListTools.thy  MList.thy  SList.thy  Semantics.thy  Utils.thy
semantics-3.0/src/: Main.hs
semantics-3.0/src/Language/: Marlowe.hs
semantics-3.0/src/Language/Marlowe/: Semantics.hs  Util.hs
semantics-3.0/src/Language/Marlowe/ACTUS/: ActusContracts.hs
semantics-3.0/src/Language/Marlowe/Analysis/: FSDepositIncentive.hs  FSMap.hs  FSSemantics.hs  FSSet.hs  Numbering.hs
semantics-3.0/src/Language/Marlowe/Examples/: CrowdFunding.hs  DepositIncentive.hs  Escrow.hs  EscrowSimple.hs  EscrowSimpleV2.hs  ExpCrowdFunding.hs  ExpEscrow.hs  ZCBG.hs  ZCBG2.hs
semantics-3.0/static_analysis/: FSDepositIncentive.hs  FSMap.hs  FSSemantics.hs  FSSet.hs  MkSymb.hs
(+247 files in other folders)
