name:                   marlowe
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

executable marlowe
    default-language:   Haskell2010
    build-depends:      base >=4.9,
                        base16-bytestring,
                        bytestring,
                        containers,
                        cryptohash,
                        QuickCheck,
                        mtl,
                        sbv,
                        serialise,
                        tasty,
                        tasty-hunit,
                        tasty-smallcheck,
                        tasty-quickcheck,
                        text,
                        template-haskell,
                        time,
                        wl-pprint -any
    other-modules:
                        Language.Marlowe
                        Language.Marlowe.Pretty
                        Language.Marlowe.Semantics
                        Language.Marlowe.SemanticsTypes
                        Language.Marlowe.Util
                        Language.Marlowe.ACTUS
                        Language.Marlowe.ACTUS.ActusContracts
                        Language.Marlowe.Examples.Auction
                        Language.Marlowe.Examples.CouponBond
                        Language.Marlowe.Examples.CrowdFunding
                        Language.Marlowe.Examples.DepositIncentive
                        Language.Marlowe.Examples.Escrow
                        Language.Marlowe.Examples.EscrowSimple
                        Language.Marlowe.Examples.ExpCrowdFunding
                        Language.Marlowe.Examples.ExpEscrow
                        Language.Marlowe.Examples.ExpRent
                        Language.Marlowe.Examples.Rent
                        Language.Marlowe.Examples.ZCBG
                        Language.Marlowe.Examples.ZCBG2
                        Language.Marlowe.Analysis.FSSet
                        Language.Marlowe.Analysis.FSMap
                        Language.Marlowe.Analysis.FSSemantics
                        Language.Marlowe.Analysis.FSSemanticsFastVerbose
                        Language.Marlowe.Analysis.IntegerArray
                        Language.Marlowe.Analysis.Numbering
                        Language.Marlowe.Analysis.MkSymb
    hs-source-dirs:     src
    main-is:            Main.hs

