name:                   marlowe-reference
version:                0.3.0.1
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
cabal-version:          >= 1.10

executable marlowe
    default-language:   Haskell2010
    build-depends:      base >=4.16.4.0 && < 5,
                        base16-bytestring >= 1 && < 2,
                        bytestring >= 0.10.12 && < 0.12,
                        containers >= 0.6.5 && < 0.7,
                        cryptohash >= 0.11.9 && < 0.12,
                        QuickCheck >= 2.14 && < 3,
                        mtl >= 2.2 && < 3,
                        sbv >= 9.0 && < 10,
                        tasty >= 1.4.2 && < 1.5,
                        tasty-hunit >= 0.10 && < 0.11,
                        tasty-smallcheck >= 0.8 && < 0.9,
                        tasty-quickcheck >= 0.10 && < 0.11,
                        text >= 1.2.4,
                        template-haskell >= 2.18 && < 3,
                        time >= 1.11 && < 2,
                        aeson >= 2 && < 3,
                        wl-pprint >= 1.2 && < 2
    other-modules:
                        Language.Marlowe
                        Language.Marlowe.Pretty
                        Language.Marlowe.Semantics
                        Language.Marlowe.Semantics.Types
                        Language.Marlowe.Semantics.Deserialisation
                        Language.Marlowe.Semantics.Serialisation
                        Language.Marlowe.ExtendedBuilder
                        Language.Marlowe.Serialisation
                        Language.Marlowe.Deserialisation
                        Language.Marlowe.FindInputs
                        Language.Marlowe.Util
                        Language.Marlowe.Examples.Auction
                        Language.Marlowe.Examples.CrowdFunding
                        Language.Marlowe.Examples.DepositIncentive
                        Language.Marlowe.Examples.Escrow
                        Language.Marlowe.Examples.EscrowSimple
                        Language.Marlowe.Examples.ExpCrowdFunding
                        Language.Marlowe.Examples.ExpEscrow
                        Language.Marlowe.Examples.ExpRent
                        Language.Marlowe.Examples.Rent
                        Language.Marlowe.Examples.ZCBG
                        Language.Marlowe.Examples.ZCBG2
                        Language.Marlowe.Analysis.FSSet
                        Language.Marlowe.Analysis.FSMap
                        Language.Marlowe.Analysis.FSSemanticsFastVerbose
                        Language.Marlowe.Analysis.IntegerArray
                        Language.Marlowe.Analysis.Numbering
                        Language.Marlowe.Analysis.MkSymb
    hs-source-dirs:     src
    main-is:            Main.hs

