cabal-version:      2.4
name:               marlowe-spec
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Exported version of the Marlowe Semantics using the isabelle proof assistant


-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             Hernan Rajchert
maintainer:         hernan.rajchert@iohk.io

extra-source-files:
    ../README.md

library
    hs-source-dirs: generated
    default-language: Haskell2010
    build-depends: base >=4.9 && <5
    other-modules:
        HOL
        List
        ListTools
        MList
        Option
        Orderings
        Product_Lexorder
        Product_Type
        SemanticsGuarantees
        Serialisation
    exposed-modules:
        Semantics
        SemanticsTypes
        -- FIXME: Try to avoid exposing
        Arith

test-suite marlowe-spec-test
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Spec.Core.Examples.Swap
    build-depends:
        base >=4.9 && <5,
        marlowe-spec,
        tasty,
        tasty-hunit,
