cabal-version:      2.4
name:               marlowe
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Exported version of the Marlowe Semantics using the isabelle proof assistant


-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Hernan Rajchert
maintainer:         hernan.rajchert@iohk.io

library
    hs-source-dirs:
        generated
        haskell
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <5,
        aeson,
        aeson-pretty,
        bytestring,
        text,
        scientific,
    other-modules:
        ByteString
        HOL
        List
        ListTools
        MList
        Option
        Orderings
        OptBoundTimeInterval
        Product_Lexorder
        Product_Type
        SList
        Stringa
    exposed-modules:
        Arith
        ArithNumInstance
        CoreOrphanEq
        Examples.Escrow
        Examples.Swap
        MarloweCoreJson
        Semantics
        SemanticsTypes
        SemanticsGuarantees

test-suite marlowe-spec-test-suite
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Spec.Core.Examples.Swap
        Spec.Core.Serialization.Json
    build-depends:
        aeson,
        aeson-pretty,
        base >=4.9 && <5,
        bytestring,
        marlowe,
        filepath,
        tasty,
        tasty-hunit,
        tasty-golden,
