cabal-version:      2.4
name:               marlowe
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Exported version of the Marlowe Semantics using the isabelle proof assistant


-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Hernan Rajchert
maintainer:         hernan.rajchert@iohk.io

library
    hs-source-dirs:
        generated
        haskell
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <5,
        aeson >= 2 && < 3,
        aeson-pretty >= 0.8.9 && < 0.9,
        bytestring >= 0.10.12 && < 0.12,
        text >= 1.2.4 && < 2,
        scientific >= 0.3.7 && < 0.4,
    other-modules:
        ByteString
        HOL
        List
        ListTools
        Option
        OptBoundTimeInterval
        Product_Lexorder
        Product_Type
        SList
        Stringa
    exposed-modules:
        Arith
        ArithNumInstance
        MList
        AssetsPreservation
        CoreOrphanEq
        Examples.Escrow
        Examples.Swap
        MarloweCoreJson
        MultiAssets
        Orderings
        PositiveAccounts
        Semantics
        SemanticsTypes
        SemanticsGuarantees
        SingleInputTransactions
        Timeout
        TransactionBound

test-suite marlowe-spec-test-suite
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Spec.Core.Examples.Swap
        Spec.Core.Serialization.Json
    build-depends:
        aeson,
        aeson-pretty,
        base >=4.9 && <5,
        bytestring,
        marlowe,
        filepath,
        tasty,
        tasty-hunit,
        tasty-golden,
