cabal-version:      3.4
name:               marlowe-spec-test
version:            0.1.0.1

-- A short (one-line) description of the package.
synopsis: Marlowe spec compliance utility tool


-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Hernan Rajchert
maintainer:         hernan.rajchert@iohk.io

extra-source-files:
    README.md

common lang
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving
    ghc-options:
        -Wall -Wnoncanonical-monad-instances
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities
        -Wunused-packages

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
        Marlowe.Spec
        Marlowe.Spec.ClientProcess
        Marlowe.Spec.Core
        Marlowe.Spec.Core.Arbitrary
        Marlowe.Spec.Core.Generators
        Marlowe.Spec.Core.Guarantees
        Marlowe.Spec.Core.Examples
        Marlowe.Spec.Core.Examples.Common
        Marlowe.Spec.Core.Examples.ContractForDifference
        Marlowe.Spec.Core.Examples.Escrow
        Marlowe.Spec.Core.Examples.Swap
        Marlowe.Spec.Core.Semantics
        Marlowe.Spec.Core.SemiArbitrary
        Marlowe.Spec.Core.Serialization.Json
        Marlowe.Spec.Interpret
        Marlowe.Spec.LocalInterpret
        Marlowe.Spec.Reproducible
        Marlowe.Spec.TypeId
        Marlowe.Utils
    build-depends:
        aeson,
        base >=4.16.4.0 && <5,
        bytestring >= 0.10.12 && < 0.12,
        containers,
        marlowe ==0.1.0.1,
        tasty ^>= 1.5,
        tasty-hunit >= 0.10 && < 0.11,
        process >= 1.6.13 && < 1.7,
        text >= 1.2.4,
        optparse-applicative >= 0.17,
        QuickCheck-GenT >= 0.2.2 && < 0.3,
        QuickCheck >= 2.14 && < 3,
        tasty-quickcheck >= 0.10 && <= 0.11,
        stm >= 2.5 && < 2.6,
        random >= 1.2 && < 1.3,
        mtl >= 2.2 && < 3,

executable marlowe-spec
    import: lang
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16.4.0 && <5,
        marlowe-spec-test,
        tasty,

test-suite marlowe-spec-test
    import: lang
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: LocalSpec.hs
    build-depends:
        base >=4.16.4.0 && <5,
        marlowe-spec-test,
        tasty,
