name:                   marlowe
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

executable marlowe
    default-language:   Haskell2010
    build-depends:      base >=4.9,
                        mtl,
                        containers,
                        sbv,
                        time,
                        QuickCheck,
                        tasty,
                        tasty-hunit,
                        tasty-smallcheck,
                        tasty-quickcheck,
                        template-haskell
    other-modules:
                        Semantics
                        ActusContracts
                        ACTUS
                        ZCBG
                        ZCBG2
                        FSSet
                        FSMap
                        FSSemantics
                        FSDepositIncentive
                        MkSymb
    hs-source-dirs:     .
                        static_analysis
    main-is:            Main.hs
